--- a/css/style.css
+++ b/css/style.css
@@ -207,6 +207,56 @@ td:nth-child(even) {
     text-align: center;
 }
 
+.doc-link {
+    font-size: medium;
+    text-align: left;
+}
+
+#data-types {
+    flex-direction: column;
+    text-align: left;
+}
+
+#int-dec, #boolean {
+    flex-direction: column;
+    text-align: left;
+    padding-left: 30px
+}
+
+#enum, #string, #free-text {
+    flex-direction: column;
+    text-align: left;
+    padding-left: 15px
+}
+
+
+.glossary-headings {
+    text-align: left;
+}
+
+
+#terms, #record {
+    font-size: larger;
+}
+
+#terms-list {
+    flex-direction: column;
+}
+
+#ipa-template {
+    text-align: left;
+    font-size: medium;
+}
+
+#controlled-vocabs {
+    text-align: left;
+    flex-direction: column;
+}
+
+#vocab {
+    padding-left: 50px;
+}
+
 @media screen and (max-width: 800px) {
     .table-container table {
         width: 300px;
